--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -14,8 +14,7 @@
                         </div>
 
                         <div class="form-group">
-                            <input type="text" class="form-control" name="identificacion_servicio_usuario"
-                                placeholder="Identificación del usuario" />
+                            <input type="text" class="form-control" name="identificacion_servicio_usuario" placeholder="Identificación del usuario" />
                         </div>
 
                         <div class="form-group">
