Se agrega la función de actualizar perfil de usuario

--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -27,9 +27,16 @@
 
                     <br/>
 
+                    <form action="/editUser/{{user.identificacion_usuario}}" method="GET">
+                        <button class="btn btn-primary btn-block">
+                            Mirar perfil
+                        </button>
+                    </form>
+{{!--
                     <button class="btn btn-primary btn-block">
                         <a href="/links" class="buttons-link">Mirar perfil</a>
                     </button>
+--}}
                 </div>
             </div>
         </div>
