--- a/src/views/editUser.hbs
+++ b/src/views/editUser.hbs
@@ -1,3 +1,28 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" href="#">Cool work!</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-expanded="false">
+            Sesión
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/login">Cerrar sesión</a>
+            <a class="dropdown-item" href="/editUser/{{usuario.identificacion_usuario}}">Ver perfil</a>
+            <div class="dropdown-divider"></div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <div class="container p-4">
     <div class="row">
         <div class="col-md-4 mx-auto">
@@ -45,6 +70,12 @@
                         <button class="btn btn-primary btn-block">
                             Editar
                         </button>
+
+                        <form action="/Volver/{{usuario.identificacion_usuario}}" method="GET">
+                            <button class="btn btn-primary btn-block">
+                                Volver
+                            </button>
+                        </form>
                     </form>
                 </div>
             </div>
