--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -1,3 +1,28 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" href="#">Cool work!</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-expanded="false">
+            Sesión
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/login">Cerrar sesión</a>
+            <a class="dropdown-item" href="/editUser/{{user.identificacion_usuario}}">Ver perfil</a>
+            <div class="dropdown-divider"></div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <div class="container p-4" style="margin-top: 50px;">
     <div class="row">
         <div class="col-md-4 mx-auto">
@@ -15,16 +40,18 @@
 
                     <form action="/registros/{{user.identificacion_usuario}}" method="GET">
                         <button class="btn btn-primary btn-block">
-                            Mirar registros creados
+                            Mirar servicios creados
                         </button>
                     </form>
 
                     <br/>
 
-                    <button class="btn btn-primary btn-block">
-                        <a href="/links/add" class="buttons-link">Crear un nuevo registro</a>
-                    </button>
-
+                     <form action="/links/add/{{user.identificacion_usuario}}" method="GET">
+                        <button class="btn btn-primary btn-block">
+                            Crear un servicio
+                        </button>
+                    </form>
+                    
                     <br/>
 
                     <form action="/editUser/{{user.identificacion_usuario}}" method="GET">
@@ -32,11 +59,6 @@
                             Mirar perfil
                         </button>
                     </form>
-{{!--
-                    <button class="btn btn-primary btn-block">
-                        <a href="/links" class="buttons-link">Mirar perfil</a>
-                    </button>
---}}
                 </div>
             </div>
         </div>
