--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -8,7 +8,11 @@
 
 }
 
+a{
+    color: #197FF9;
+}
+
 a:hover{
-    text-decoration: none;
-    color: white;
+    text-decoration: underline;
+    color: #197FF9;
 }
