--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -1,4 +1,29 @@
-<div class="container p-4">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" href="#">Cool work!</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-expanded="false">
+            Menú
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/">Página principal</a>
+            <a class="dropdown-item" href="/login">Iniciar sesión</a>
+            <div class="dropdown-divider"></div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container p-4" style="margin-top: 20px;">
     <div class="row">
         <div class="col-md-4 mx-auto">
             <div class="card text-center">
@@ -46,6 +71,10 @@
                             Guardar
                         </button>
                     </form>
+
+                     <div style="margin-top: 10px;">
+                        <a href="/login">Iniciar sesión</a>
+                    </div> 
                 </div>
             </div>
         </div>
