--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -39,7 +39,7 @@
                         </div>
 
                         <div class="form-group">
-                            <input type="text" class="form-control" name="identificacion_servicio_usuario" placeholder="Identificación del usuario" />
+                            <input type="text" value="{{user.identificacion_usuario}}" class="form-control" name="identificacion_servicio_usuario" placeholder="Identificación del usuario" readonly="readonly"/>
                         </div>
 
                         <div class="form-group">
