--- a/src/views/home/index.hbs
+++ b/src/views/home/index.hbs
@@ -24,40 +24,70 @@
         </div>
     </nav>
 
-    <div class="container">
-        <div class="row row-cols-2">
+    <div class="container mx-auto">
+        <div class="row mx-auto">
             <div class="col">
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown mx-auto">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                            data-toggle="dropdown" aria-expanded="false">
-                            Buscar profesionales
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                </ul>
+                <form action="/searchUser" method="GET">
+                    <button class="btn btn-light btn-block">
+                        Buscar servicios
+                    </button>
+                </form>
             </div>
 
             <div class="col">
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown mx-auto">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                            data-toggle="dropdown" aria-expanded="false">
-                            Buscar servicios
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                </ul>
+                <form action="/searchUser" method="GET">
+                    <button class="btn btn-light btn-block">
+                        Buscar servicios
+                    </button>
+                </form>
             </div>
         </div>
     </div>
 </header>
 
+<div class="container p-4">
+    <div class="row">
+        {{#each services}}
+        <div class="col-md-4" style="margin-top: 10px;">
+            <div class="card">
+                <div class="card-body mx-auto">
+                    <a href="" class="text-center" target="_blank">
+                        <h3 class="card-title text-uppercase">
+                            {{nombre_servicio}}
+                        </h3>
+                    </a>
+                    <h6>Identificación del registro:</h6>
+                    <p>{{identificacion_registro}}</p>
+
+                    <h6>Categoría del servicio:</h6>
+                    <p>{{codigo_servicio_categoria}}</p>
+
+                    <h6>Identificación usuario:</h6>
+                    <p>{{identificacion_servicio_usuario}}</p>
+
+                    <h6>Descripción del registro:</h6>
+                    <p>{{descripcion_servicio}}</p>
+
+                    <p class="text-center">
+                        {{timeago created_at}}
+                    </p>
+
+                    <form action="/viewUser/{{identificacion_servicio_usuario}}" method="GET">
+                        <button class="btn btn-primary btn-block button-link">
+                            Ver usuario
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        {{else}}
+
+        <div class="col-md-4 mx-auto">
+            <div class="card card-body text-center">
+                <p>No hay links guardados</p>
+            </div>
+
+            {{/each}}
+        </div>
+    </div>
