--- a/src/views/home/viewServices.hbs
+++ b/src/views/home/viewServices.hbs
@@ -14,6 +14,7 @@
                             Sesión
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/">Página principal</a>
                             <a class="dropdown-item" href="/login">Iniciar sesión</a>
                             <a class="dropdown-item" href="/signup">Registrarse</a>
                             <div class="dropdown-divider"></div>
@@ -27,6 +28,14 @@
     <div class="container mx-auto">
         <div class="row mx-auto">
             <div class="col">
+                <form action="/searchUser" method="GET">
+                    <button class="btn btn-light btn-block">
+                        Buscar servicios
+                    </button>
+                </form>
+            </div>
+
+            <div class="col">
                 <form action="/searchService" method="GET">
                     <button class="btn btn-light btn-block">
                         Buscar servicios
@@ -39,7 +48,7 @@
 
 <div class="container p-4">
     <div class="row">
-        {{#each services}}
+        {{#each servicio}}
         <div class="col-md-4" style="margin-top: 10px;">
             <div class="card">
                 <div class="card-body mx-auto">
