Se trabaja en conexión con oracle

--- a/src/views/home/searchService.hbs
+++ b/src/views/home/searchService.hbs
@@ -32,7 +32,7 @@
             <div class="card text-center">
                 <div class="card-header">
                     <h5>
-                        Seleccione el tipo de usuario desea buscar
+                        Seleccione el tipo de servicio desea buscar
                     </h5>
                 </div>
 
