--- a/src/views/links/edit.hbs
+++ b/src/views/links/edit.hbs
@@ -40,7 +40,7 @@
 
                         <div class="form-group">
                             <input type="text" value="{{registrosUsuario.identificacion_servicio_usuario}}" class="form-control" name="identificacion_servicio_usuario"
-                                placeholder="Identificación del usuario" />
+                                placeholder="Identificación del usuario" readonly="readonly"/>
                         </div>
 
                         <div class="form-group">
