Se agregan actualizaciones

--- a/src/views/editUser.hbs
+++ b/src/views/editUser.hbs
@@ -62,8 +62,8 @@
                             <p class="text-left">Genero:</p>
                             <select name="codigo_sexo_usuario" class="form-control">
                                 <option disabled>1 para Masculino, 2 para femenino</option>
-                                <option>11</option>
-                                <option>22</option>                                
+                                <option>masculino</option>
+                                <option>femenino</option>                                
                             </select>
                         </div>
 
