--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -9,10 +9,10 @@
 }
 
 a{
-    color: #197FF9;
+    color: #3EC70B;
 }
 
 a:hover{
     text-decoration: underline;
-    color: #197FF9;
+    color: #3EC70B;
 }
