--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
   <div class="container">
-    <a class="navbar-brand" href="/">Cool work!</a>
+    <a class="navbar-brand" href="/">Foro Estudiantil</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -36,21 +36,21 @@
                 <br />
 
                 <div class="mx-auto">
-                    <img src="/images/trabajo-en-equipo.png" alt="img_cool_work" style="height: 5rem;">
+                    <img src="/images/logoPoli.png" alt="img_cool_work" style="height: 5rem;">
                 </div>
 
                 <div class="card-body">
-                    <form action="/login" method="POST">
+                    <form action="/loginUser" method="POST">
                         <div class="form-group">
-                            <input type="text" name="identificacion_usuario" placeholder="Identificación de usuario"
-                                class="form-control" autofocus />
+                            <input type="text" name="identificacionUsuario" placeholder="Identificación de usuario"
+                                class="form-control" id="username" autofocus />
                         </div>
 
                         <div class="form-group">
-                            <input type="password" name="clave" placeholder="Contraseña" class="form-control" />
+                            <input type="password" name="contraseña" placeholder="Contraseña" class="form-control" id="password"/>
                         </div>
 
-                        <button class="btn btn-primary btn-block">
+                        <button class="btn btn-success btn-block" id="button-login">
                             Acceder
                         </button>
                     </form>
