--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
   <div class="container">
-    <a class="navbar-brand" href="/">Cool work!</a>
+    <a class="navbar-brand" href="/">Foro Estudiantil</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -33,41 +33,29 @@
                     </h3>
                 </div>
                 <div class="card-body">
-                    <form action="/signup" method="POST">
+                    <form action="/createUser" method="POST">
                         <div class="form-group">
-                            <input type="text" name="identificacion_usuario" placeholder="Identificación de usuario" class="form-control" autofocus/>
+                            <input type="text" name="identificacionUsuario" placeholder="Identificación de usuario" class="form-control" autofocus/>
                         </div>
 
                         <div class="form-group">
-                            <input type="text" name="nombre_usuario" placeholder="Nombre del usuario" class="form-control"/>
+                            <input type="text" name="nombreUsuario" placeholder="Nombre del usuario" class="form-control"/>
+                        </div>
+
+                         <div class="form-group">
+                            <input type="password" name="contraseña" placeholder="Contraseña" class="form-control"/>
                         </div>
 
                         <div class="form-group">
-                            <input type="password" name="password" placeholder="Contraseña" class="form-control"/>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="number" name="telefono_usuario" placeholder="Teléfono" class="form-control"/>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="text" name="codigo_residencia_usuario" placeholder="Código postal" class="form-control"/>
-                        </div>
-{{!--
-                        <div class="form-group">
-                            <input type="date" name="fecha_nacimiento_usuario" class="form-control"/>
-                        </div>
---}}
-                        <div class="form-group">
-                            <p class="text-left">Genero:</p>
-                            <select name="codigo_sexo_usuario" class="form-control">
-                                <option disabled>1 para Masculino, 2 para femenino</option>
-                                <option>masculino</option> 
-                                <option>femenino</option>                                
+                            <p class="text-left">Tipo de usuario</p>
+                            <select name="rolUniversidad" class="form-control">
+                                <option disabled>Elige el tipo de usuario</option>
+                                <option>estudiante</option> 
+                                <option>profesor</option>                                
                             </select>
                         </div>
 
-                        <button class="btn btn-primary btn-block">
+                        <button class="btn btn-success btn-block">
                             Guardar
                         </button>
                     </form>
