--- a/src/views/editUser.hbs
+++ b/src/views/editUser.hbs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
   <div class="container">
-    <a class="navbar-brand" href="/">Cool work!</a>
+    <a class="navbar-brand" href="/">Foro Estudiantil</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -14,7 +14,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/login">Cerrar sesión</a>
-            <a class="dropdown-item" href="/editUser/{{usuario.identificacion_usuario}}">Ver perfil</a>
+            <a class="dropdown-item" href="/editUser/{{usuario.identificacionUsuario}}">Ver perfil</a>
             <div class="dropdown-divider"></div>
           </div>
         </li>
@@ -33,49 +33,39 @@
                     </h3>
                 </div>
                 <div class="card-body">
-                    <form action="/editUser/{{usuario.identificacion_usuario}}" method="POST">
+                    <form action="/updateUser/{{usuario.identificacionUsuario}}" method="POST">
                         <div class="form-group">
-                            <input type="text" value={{usuario.identificacion_usuario}} name="identificacion_usuario" placeholder="Identificación de usuario" class="form-control" readonly="readonly"/>
+                            <input type="text" value={{usuario.identificacionUsuario}} name="identificacionUsuario" placeholder="Identificación de usuario" class="form-control" readonly="readonly"/>
                         </div>
 
                         <div class="form-group">
-                            <input type="text" value={{usuario.nombre_usuario}} name="nombre_usuario" placeholder="Nombre del usuario" class="form-control" autofocus/>
+                            <input type="text" value={{usuario.nombreUsuario}} name="nombreUsuario" placeholder="Nombre del usuario" class="form-control" autofocus/>
                         </div>
 
                         <div class="form-group">
-                            <input type="password" value={{usuario.password}} name="password" placeholder="Contraseña" class="form-control"/>
+                            <input type="password" value={{usuario.contraseña}} name="contraseña" placeholder="Contraseña" class="form-control"/>
                         </div>
 
                         <div class="form-group">
-                            <input type="number" value={{usuario.telefono_usuario}} name="telefono_usuario" placeholder="Teléfono" class="form-control"/>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="text" value={{usuario.codigo_residencia_usuario}} name="codigo_residencia_usuario" placeholder="Código postal" class="form-control"/>
-                        </div>
-{{!--
-                        <div class="form-group">
-                            <input type="date" value={{usuario.fecha_nacimiento_usuario}} name="fecha_nacimiento_usuario" class="form-control"/>
-                        </div>
---}}
-                        <div class="form-group">
-                            <p class="text-left">Genero:</p>
-                            <select name="codigo_sexo_usuario" class="form-control">
-                                <option disabled>1 para Masculino, 2 para femenino</option>
-                                <option>masculino</option>
-                                <option>femenino</option>                                
+                            <p class="text-left">Tipo de usuario</p>
+                            <select name="rolUniversidad" class="form-control">
+                                <option disabled>Elige el tipo de usuario</option>
+                                <option>estudiante</option> 
+                                <option>profesor</option>                                
                             </select>
                         </div>
 
-                        <button class="btn btn-primary btn-block">
+                        <button class="btn btn-success btn-block">
                             Editar
                         </button>
+                    </form>
 
-                        <form action="/Volver/{{usuario.identificacion_usuario}}" method="GET">
-                            <button class="btn btn-primary btn-block">
-                                Volver
-                            </button>
-                        </form>
+                    <br/>
+
+                    <form action="/volver/{{usuario.identificacionUsuario}}" method="GET">
+                        <button class="btn btn-success btn-block">
+                            Volver
+                        </button>
                     </form>
                 </div>
             </div>
