--- a/src/views/home/searchHilos.hbs
+++ b/src/views/home/searchHilos.hbs
@@ -1,7 +1,7 @@
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container">
-            <a class="navbar-brand" href="/">Cool work!</a>
+            <a class="navbar-brand" href="/">Foro estudiantil</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -32,28 +32,27 @@
             <div class="card text-center">
                 <div class="card-header">
                     <h5>
-                        Seleccione el tipo de servicio desea buscar
+                        Seleccione el tipo de hilo que buscas
                     </h5>
                 </div>
 
                 <br />
 
                 <div class="mx-auto">
-                    <img src="/images/trabajo-en-equipo.png" alt="img_cool_work" style="height: 5rem;">
+                    <img src="/images/logoPoli.png" alt="img_cool_work" style="height: 5rem;">
                 </div>
 
                 <div class="card-body">
-                    <form action="/buscarServicio" method="POST">
+                    <form action="/searchHilos" method="POST">
                         <div class="form-group">
-                            <select name="codigo_servicio_categoria" class="form-control">
-                                <option disabled>Categoria del servicio</option>
-                                <option>psicologia</option>
-                                <option>desarrollo web</option>
-                                <option>abogado</option>
+                            <select name="codigoSO_hilo" class="form-control">
+                                <option disabled>1 para buscar sobre windows, 2 para buscar sobre linux</option>
+                                <option>1</option>
+                                <option>2</option>
                             </select>
                         </div>
 
-                        <button class="btn btn-primary btn-block">
+                        <button class="btn btn-success btn-block">
                             Buscar
                         </button>
                     </form>
