--- a/src/views/home/viewHilos.hbs
+++ b/src/views/home/viewHilos.hbs
@@ -1,7 +1,7 @@
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container">
-            <a class="navbar-brand" href="/">Cool work!</a>
+            <a class="navbar-brand" href="/">Foro Estudiantil</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,20 +26,20 @@
     </nav>
 
     <div class="container mx-auto">
-            <div class="col">
-                <form action="/searchService" method="GET">
-                    <button class="btn btn-light btn-block">
-                        Buscar servicios
-                    </button>
-                </form>
-            </div>
+        <div class="col">
+            <form action="/searchService" method="GET">
+                <button class="btn btn-light btn-block">
+                    Buscar servicios
+                </button>
+            </form>
         </div>
+    </div>
     </div>
 </header>
 
 <div class="container p-4">
     <div class="row">
-        {{#each servicio}}
+        {{#each hilos}}
         <div class="col-md-4" style="margin-top: 10px;">
             <div class="card">
                 <div class="card-body mx-auto">
@@ -48,27 +48,27 @@
                             {{nombre_servicio}}
                         </h3>
                     </a>
-                    <h6>Identificación del registro:</h6>
-                    <p>{{identificacion_registro}}</p>
+                    <h6>Identificación del Hilo:</h6>
+                    <p>{{identificacionHilo}}</p>
 
-                    <h6>Categoría del servicio:</h6>
-                    <p>{{codigo_servicio_categoria}}</p>
+                    <h6>Descripción del hilo:</h6>
+                    <p>{{descripcionHilo}}</p>
 
-                    <h6>Identificación usuario:</h6>
-                    <p>{{identificacion_servicio_usuario}}</p>
-
-                    <h6>Descripción del registro:</h6>
-                    <p>{{descripcion_servicio}}</p>
-
+                    <h6>Referencias bibliográficas:</h6>
+                    <p>{{referencasBibliograficas}}</p>
+{{!--
                     <p class="text-center">
                         {{timeago created_at}}
                     </p>
-
-                    <form action="/viewUser/{{identificacion_servicio_usuario}}" method="GET">
-                        <button class="btn btn-primary btn-block button-link">
-                            Ver usuario
-                        </button>
-                    </form>
+--}}
+                    <div class="mx-auto col-sm">                      
+                        <form action="/searchUser" method="GET"
+                            style="display: inline;">
+                            <button class="btn btn-block btn-success">
+                                Volver
+                            </button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -77,9 +77,17 @@
 
         <div class="col-md-4 mx-auto">
             <div class="card card-body text-center">
-                <p>No hay links guardados</p>
-            </div>
-
-            {{/each}}
+                <p>No hay hilos guardados</p>
+                <div class="mx-auto col-sm">                      
+                        <form action="/searchUser" method="GET"
+                            style="display: inline;">
+                            <button class="btn btn-block btn-success">
+                                Volver
+                            </button>
+                        </form>
+                </div>
         </div>
+
+        {{/each}}
     </div>
+</div>
