--- a/src/views/links/delete.hbs
+++ b/src/views/links/delete.hbs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
   <div class="container">
-    <a class="navbar-brand" href="/">Cool work!</a>
+    <a class="navbar-brand" href="/">Foro Estudiantil</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -14,7 +14,6 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/login">Cerrar sesión</a>
-            <a class="dropdown-item" href="/editUser/{{registrosUsuario.identificacion_servicio_usuario}}">Ver perfil</a>
             <div class="dropdown-divider"></div>
           </div>
         </li>
@@ -29,38 +28,34 @@
             <div class="card">
                 <br />
                 <div class="mx-auto">
-                    <img src="/images/trabajo-en-equipo.png" alt="img_cool_work" style="height: 5rem;">
+                    <img src="/images/logoPoli.png" alt="img_cool_work" style="height: 5rem;">
                 </div>
                 <div class="card-body">
                     <div class="text-center">
-                        <h5>¿Está seguro de eliminar el registro?</h5>
+                        <h5>¿Está seguro de eliminar el hilo?</h5>
                     </div>
 
                     <br/>
 
-                    <form action="/links/delete/{{registrosUsuario.identificacion_registro}}" method="POST">                
+                    <form action="/links/delete/{{hilosUsuario.identificacionHilo}}" method="POST">
                         <div class="form-group">
-                            <input type="text" value="{{registrosUsuario.nombre_servicio}}" class="form-control" name="nombre_servicio"
-                                placeholder="Nombre de registro" readonly="readonly"/>
+                            <input type="text" value="{{hilosUsuario.identificacionHilo}}" class="form-control" name="identificacionHilo"
+                                placeholder="Identificación del hilo" readonly="readonly"/>
                         </div>
 
                         <div class="form-group">
-                            <input type="text" value="{{registrosUsuario.identificacion_servicio_usuario}}" class="form-control" name="identificacion_servicio_usuario"
-                                placeholder="Identificación del usuario" readonly="readonly"/>
+                            <input type="text" value="{{hilosUsuario.descripcionHilo}}" class="form-control" name="descripcionnHilo"
+                                placeholder="Descripción del hilo" readonly="readonly"/>
                         </div>
 
                         <div class="form-group">
-                            <select name="codigo_servicio_categoria" class="form-control" readonly="readonly">
-                                <option disabled>Categoria del servicio</option>
-                                <option>psicologia</option>
-                                <option>desarrollo web</option>
-                                <option>abogado</option>
-                            </select>
+                            <input type="text" value="{{hilosUsuario.identificacionUsuario_hilo}}" class="form-control" name="identificacionUsuario_hilo"
+                                placeholder="Identificación del hilo" readonly="readonly"/>
                         </div>
 
                         <div class="form-group">
-                            <textarea name="descripcion_servicio" rows="3" class="form-control"
-                                placeholder="Descripción del servicio" readonly="readonly">{{registrosUsuario.descripcion_servicio}}</textarea>
+                            <input type="text" value="{{hilosUsuario.referencasBibliograficas}}" class="form-control" name="referencasBibliograficas"
+                                placeholder="Referencias del hilo" readonly="readonly"/>
                         </div>
 
                         <button class="btn btn-danger btn-block">
@@ -71,8 +66,8 @@
 
                     <br/>
 
-                    <form action="/registros/{{registrosUsuario.identificacion_servicio_usuario}}" method="GET">
-                        <button class="btn btn-primary btn-block">
+                    <form action="/threads/{{hilosUsuario.identificacionUsuario_hilo}}" method="GET">
+                        <button class="btn btn-success btn-block">
                             Volver
                         </button>
                     </form>
