--- a/src/views/links/edit.hbs
+++ b/src/views/links/edit.hbs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-succes">
   <div class="container">
-    <a class="navbar-brand" href="/">Cool work!</a>
+    <a class="navbar-brand" href="/">Foro Estudiantil!</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -29,43 +29,34 @@
             <div class="card">
                 <br />
                 <div class="mx-auto">
-                    <img src="/images/trabajo-en-equipo.png" alt="img_cool_work" style="height: 5rem;">
+                    <img src="/images/logoPoli.png" alt="img_cool_work" style="height: 5rem;">
                 </div>
                 <div class="card-body">
-                    <form action="/links/edit/{{registrosUsuario.identificacion_registro}}" method="POST">                
+                    <form action="/links/updateThread/{{registrosUsuario.identificacionHilo}}" method="POST">                                      
                         <div class="form-group">
-                            <input type="text" value="{{registrosUsuario.nombre_servicio}}" class="form-control" name="nombre_servicio"
-                                placeholder="Nombre de registro" />
-                        </div>
-
-                        <div class="form-group">
-                            <input type="text" value="{{registrosUsuario.identificacion_servicio_usuario}}" class="form-control" name="identificacion_servicio_usuario"
+                            <input type="text" value="{{registrosUsuario.identificacionUsuario_hilo}}" class="form-control" name="identificacionUsuario_hilo"
                                 placeholder="Identificación del usuario" readonly="readonly"/>
                         </div>
 
                         <div class="form-group">
-                            <select name="codigo_servicio_categoria" class="form-control">
-                                <option disabled>Categoria del servicio</option>
-                                <option>psicologia</option>
-                                <option>desarrollo web</option>
-                                <option>abogado</option>
-                            </select>
+                            <input type="text" value="{{registrosUsuario.descripcionHilo}}" class="form-control" name="descripcionHilo"
+                                placeholder="Descripción del hilo"/>
                         </div>
 
                         <div class="form-group">
-                            <textarea name="descripcion_servicio" rows="3" class="form-control"
-                                placeholder="Descripción del servicio">{{registrosUsuario.descripcion_servicio}}</textarea>
+                            <input type="text" value="{{registrosUsuario.referencasBibliograficas}}" class="form-control" name="referencasBibliograficas"
+                                placeholder="Referencias del hilo"/>
                         </div>
 
-                        <button class="btn btn-primary btn-block">
+                        <button class="btn btn-success btn-block">
                             Guardar
                         </button>
                     </form>
 
                     <br/>
 
-                    <form action="/registros/{{registrosUsuario.identificacion_servicio_usuario}}" method="GET">
-                        <button class="btn btn-primary btn-block">
+                    <form action="/threads/{{registrosUsuario.identificacionUsuario_hilo}}" method="GET">
+                        <button class="btn btn-success btn-block">
                             Volver
                         </button>
                     </form>
